# rtiow

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: aabb.h  bvh.cc  bvh.h  camera.h  common.h  draw.cc  draw.h  image_texture.cc  image_texture.h  main.cc  material.cc  material.h  object.cc  object.h  pch.h  ray.h  ray_tracer.h  stopwatch.cc  stopwatch.h  texture.h  thread_pool.cc  thread_pool.h  vec.h
